--- a/src/handlebars/book-listing.handlebars
+++ b/src/handlebars/book-listing.handlebars
@@ -13,6 +13,6 @@
           as a module, which allows it to be resolved from the "helpers"
           directory, which is specified as a resolve fallback in the
           webpack config. --}}
-    {{$json books}}
+    {{json books}}
   </pre>
 </div>
