--- a/src/styles/blocks/header/_index.scss
+++ b/src/styles/blocks/header/_index.scss
@@ -25,10 +25,8 @@
 
     margin-top: 33px;
     margin-bottom: 10px;
-  }
 
-  .nav-item {
-    a {
+    &__link {
       display: block;
 
       padding: 14px 16px;
@@ -89,7 +87,7 @@
     background-image: url("/src/images/svg/nav/search.svg");
   }
 
-  &__profile-icon {
+  &__profile {
     background-image: url("/src/images/svg/nav/profile.svg");
   }
 
@@ -134,14 +132,14 @@
   &_opened {
     display: block;
   }
-}
 
-.search-form__input {
-  width: 100%;
-  height: 100%;
-  padding-inline: 5px;
-  border: none;
-  outline: none;
+  &__input {
+    width: 100%;
+    height: 100%;
+    padding-inline: 5px;
+    border: none;
+    outline: none;
 
-  color: $black;
+    color: $black;
+  }
 }
