Add banner and benefits blocks for mobile apps resolution

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -4,9 +4,11 @@ $black: #000;
 $orange: #f6623e;
 $peach: #fff8f6;
 $light-gray: #9d9d9d;
+$middle-grey: #828181;
 $dark-grey: #454545;
 $pink: #fa00c4;
 
 // shadows
 $box-shadow: 0 0 15px rgb(0 0 0 / 10%);
 $button-shadow: 0 0 4px rgb(0 0 0 / 25%);
+$banner-shadow: 0 4px 4px rgb(0 0 0 / 25%);
