--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,8 @@
+@use "sass:math";
 @import "normalize";
 @import "fonts";
 @import "colors";
 @import "common";
 @import "blocks/header";
+@import "blocks/banner";
+@import "blocks/benefits";
