Add about company block for mobile apps resolution and rename images

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -11,3 +11,13 @@ body {
   margin-inline: auto;
   padding-inline: 15px;
 }
+
+.button {
+  font-size: 16px;
+
+  @include medium-font;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
