--- a/src/styles/blocks/_banner.scss
+++ b/src/styles/blocks/_banner.scss
@@ -1,5 +1,6 @@
 .banner {
   $reduction-ratio: 2.1;
+
   margin-top: 26px;
   padding-block: math.div(208px, $reduction-ratio);
   border-bottom-right-radius: 200px;
@@ -25,8 +26,6 @@
     font-size: math.div(66px, $reduction-ratio);
     line-height: math.div(92px, $reduction-ratio);
 
-    color: $black;
-
     @include semibold-font;
   }
 
@@ -39,12 +38,16 @@
     padding: 14px 30px;
     border: none;
 
-    font-size: 16px;
     line-height: 20px;
 
     color: $white;
     background-color: $orange;
 
-    @include medium-font;
+    &:hover {
+      outline: 2px solid $orange;
+
+      color: $black;
+      background-color: transparent;
+    }
   }
 }
